tests/paczka1/small_fuzzy/64607088.err
Error in line 2: Re6kNP S528 63,7
Error in line 1: T3Rip1R A247 20,8
Error in line 4: rwsWeTbc S528 19,3
Error in line 12: 1VKKE S378 15,0
